--- a/packages/@sanity/base/src/styles/variables/forms.css
+++ b/packages/@sanity/base/src/styles/variables/forms.css
@@ -12,7 +12,7 @@
   --input-bg-invalid: var(--component-bg);
   --input-bg-disabled: var(--gray-lighter);
   --input-color: var(--text-color);
-  --input-border-color: color(var(--component-border-color));
+  --input-border-color: var(--component-border-color);
   --input-border-size: 1px;
   --input-line-height: 2em;
   --input-padding-vertical: 0.5em;
@@ -31,11 +31,6 @@
   --cursor-disabled: not-allowed;
   --clear-cross-color: var(--input-color);
   --clear-cross-color-hover: var(--state-danger-color);
-  --form-builder-block-border-color: color(var(--gray-light) alpha(80%));
-  --form-builder-block-border-color-focus: var(--brand-primary);
-  --form-builder-block-background: var(--gray-lighter);
-  --form-builder-block-background-hover: color(var(--gray-light) alpha(5%));
-  --form-builder-block-background-selected: var(--text-selection-color);
   --input-box-shadow-base: var(--gray-base);
   --input-box-shadow: none;
   --input-box-shadow--hover: none;
@@ -51,5 +46,19 @@
   --fieldset-box-shadow--focus: var(--input-box-shadow--focus);
   --fieldset-box-shadow--invalid-focus: var(--input-box-shadow--invalid-focus);
   --fieldset-bg: transparent;
+  --form-builder-block-border-color: var(--component-border-color);
+  --form-builder-block-border-color-focus: var(--input-border-color-focus);
+  --form-builder-block-border-color-error: var(--input-border-color-invalid);
+  --form-builder-block-background: var(--gray-lighter);
+  --form-builder-block-background-hover: var(--gray-lightest);
+  --form-builder-block-background-selected: var(--text-selection-color);
+  --form-builder-block-shadow: var(--input-box-shadow);
+  --form-builder-block-shadow--hover:
+    0 0 2px 0 color(var(--input-border-color-focus) a(22%)),
+    0 2px 5px 0 color(var(--input-border-color-focus) a(25%)),
+    0 0 1px 1px color(var(--input-border-color-focus) a(40%));
   --form-builder-block-shadow--focus: var(--input-box-shadow--focus);
+  --form-builder-block-shadow--error: var(--input-box-shadow--error);
+  --form-builder-block-shadow--error-focus: var(--input-box-shadow--error-focus);
+  --form-builder-block-shadow--error-hover: var(--input-box-shadow--error-hover);
 }
