--- a/packages/@sanity/components/src/previews/styles/InlinePreview.css
+++ b/packages/@sanity/components/src/previews/styles/InlinePreview.css
@@ -1,8 +1,7 @@
 /* line-height: 1.428571429; */
 
 .root {
-  display: inline-block;
-  line-height: 1em;
+  display: inline;
   position: relative;
 }
 
@@ -11,7 +10,7 @@
   position: relative;
 
   @nest & img {
-    height: 1em;
+    height: 1.4ex;
     display: inline;
     object-fit: cover;
   }
@@ -19,4 +18,12 @@
   @nest & div {
     display: inline;
   }
+}
+
+.title:empty {
+  display: none;
+}
+
+.media:not(:empty) + .title:not(:empty) {
+  padding-left: 0.2em;
 }
