--- a/packages/@sanity/form-builder/src/inputs/BlockEditor/nodes/styles/InlineObject.css
+++ b/packages/@sanity/form-builder/src/inputs/BlockEditor/nodes/styles/InlineObject.css
@@ -9,15 +9,17 @@
 
 .previewContainer {
   position: relative;
-  display: inline-block;
+  display: inline;
   cursor: move;
   box-sizing: border-box;
   border: 1px solid transparent;
   background-color: var(--form-builder-block-background);
+  height: 1em;
+  padding: 0 0.25em;
+}
 
-  @nest &:hover {
-    background-color: var(--form-builder-block-background-hover);
-  }
+.previewContainer:hover {
+  background-color: var(--form-builder-block-background-hover);
 }
 
 .root.hasErrors > .previewContainer {
@@ -50,6 +52,11 @@
   background-color: color(var(--state-danger-color) a(80%));
 }
 
+.root.hasErrors > .previewContainer:hover {
+  background-color: color(var(--state-danger-color) lightness(- 5%));
+  border: 1px solid var(--form-builder-block-border-color-error);
+}
+
 .functions {
   display: inline-flex;
   align-items: center;
@@ -57,36 +64,28 @@
   font-size: var(--font-size-small);
   color: var(--text-color-secondary);
   margin-left: var(--small-padding);
+}
 
-  @nest & > * {
-    margin-right: var(--small-padding);
-  }
+.functions > * {
+  margin-right: var(--small-padding);
 }
 
 .linkToReference {
   z-index: 2;
   transition: transform 0.1s linear, opacity 0.1s linear;
   transform: scale(1.2);
+}
 
-  @nest &:hover {
-    opacity: 1;
-    color: var(--link-color);
+.linkToReference svg {
+  color: inherit;
+}
 
-    @nest & svg {
-      color: var(--link-color);
-    }
-  }
+.linkToReference:hover {
+  opacity: 1;
+  color: var(--link-color);
+}
 
-  @nest &:active {
-    opacity: 1;
-    color: var(--text-color);
-
-    @nest & svg {
-      color: var(--text-color);
-    }
-  }
-
-  @nest & svg {
-    color: var(--text-color);
-  }
+.linkToReference:active {
+  opacity: 1;
+  color: var(--text-color);
 }
