--- a/packages/@sanity/form-builder/src/inputs/BlockEditor/nodes/styles/InlineObject.css
+++ b/packages/@sanity/form-builder/src/inputs/BlockEditor/nodes/styles/InlineObject.css
@@ -4,7 +4,7 @@
 .root {
   display: inline;
   position: relative;
-  margin: 0 0.25em; /* Allow cursor to show in nearby text */
+  margin: 0 1px; /* Allow cursor to show in nearby text */
 }
 
 .previewContainer {
@@ -16,19 +16,23 @@
   background-color: var(--form-builder-block-background);
   height: 1em;
   padding: 0 0.25em;
+  border-radius: 2px;
 }
 
 .previewContainer:hover {
-  background-color: var(--form-builder-block-background-hover);
+  background-color: var(--selectable-item-color-hover);
+  box-shadow: var(--form-builder-block-shadow--hover);
 }
 
 .root.hasErrors > .previewContainer {
-  background-color: var(--state-danger-color);
+  box-shadow: var(--form-builder-block-shadow--error);
+  background-color: color(var(--state-danger-color) a(15%));
   border: 1px solid var(--form-builder-block-border-color-error);
 }
 
 .root.focused > .previewContainer {
   border: 1px solid var(--form-builder-block-border-color-focus);
+  background-color: var(--selectable-item-color-focus);
   box-shadow: var(--form-builder-block-shadow--focus);
 }
 
@@ -47,14 +51,19 @@
 }
 
 .root.focused.hasErrors > .previewContainer {
-  box-shadow: var(--input-box-shadow--error-focus);
+  box-shadow: var(--form-builder-block-shadow--error-focus);
   border: 1px solid var(--state-danger-color);
-  background-color: color(var(--state-danger-color) a(80%));
+  background-color: color(var(--state-danger-color) a(30%));
 }
 
 .root.hasErrors > .previewContainer:hover {
-  background-color: color(var(--state-danger-color) lightness(- 5%));
+  box-shadow: var(--form-builder-block-shadow--error-hover);
+  background-color: color(var(--state-danger-color) a(25%));
   border: 1px solid var(--form-builder-block-border-color-error);
+}
+
+.root.focused.hasErrors > .previewContainer:hover {
+  background-color: color(var(--state-danger-color) a(45%));
 }
 
 .functions {
