--- a/packages/@sanity/form-builder/src/inputs/BlockEditor/nodes/styles/InlineObject.css
+++ b/packages/@sanity/form-builder/src/inputs/BlockEditor/nodes/styles/InlineObject.css
@@ -63,6 +63,7 @@
 }
 
 .root.focused.hasErrors > .previewContainer:hover {
+  box-shadow: var(--form-builder-block-shadow--error-hover);
   background-color: color(var(--state-danger-color) a(45%));
 }
 
