--- a/packages/@sanity/base/src/styles/variables/forms.css
+++ b/packages/@sanity/base/src/styles/variables/forms.css
@@ -50,7 +50,7 @@
   --form-builder-block-border-color-focus: var(--input-border-color-focus);
   --form-builder-block-border-color-error: var(--input-border-color-invalid);
   --form-builder-block-background: var(--gray-lighter);
-  --form-builder-block-background-hover: var(--gray-light);
+  --form-builder-block-background-hover: color(var(--brand-primary) a(20%));
   --form-builder-block-background-selected: var(--text-selection-color);
   --form-builder-block-shadow: var(--input-box-shadow);
   --form-builder-block-shadow--hover:
