--- a/packages/@sanity/form-builder/src/inputs/BlockEditor/nodes/styles/BlockExtras.css
+++ b/packages/@sanity/form-builder/src/inputs/BlockEditor/nodes/styles/BlockExtras.css
@@ -1,23 +1,20 @@
 @import 'part:@sanity/base/theme/variables-style';
 
 .root {
-  display: flex;
+  /* display: flex; */
   position: absolute;
   top: 0;
   bottom: 0;
-  right: 0;
-  transform: translateX(100%);
-  justify-content: flex-start;
-  align-content: center;
+  left: calc(100% - 2px);
   user-select: none;
   font-weight: normal;
   font-size: 1rem;
+  padding-left: var(--small-padding);
 }
 
 .withSomething {
   composes: root;
   border-left: 2px solid var(--brand-primary);
-  padding-left: var(--small-padding);
   margin-bottom: var(--extra-small-padding);
   margin-top: var(--extra-small-padding);
 }
