--- a/packages/@sanity/form-builder/src/inputs/BlockEditor/nodes/styles/Markers.css
+++ b/packages/@sanity/form-builder/src/inputs/BlockEditor/nodes/styles/Markers.css
@@ -1,5 +1,9 @@
 @import 'part:@sanity/base/theme/variables-style';
 
+.root {
+  display: flex;
+}
+
 .markerGroup {
   display: inline-block;
   padding-right: var(--small-padding);
