[form-builder] Block editor: fix broken numbered list

--- a/packages/@sanity/form-builder/src/inputs/BlockEditor/nodes/styles/ListItem.css
+++ b/packages/@sanity/form-builder/src/inputs/BlockEditor/nodes/styles/ListItem.css
@@ -2,6 +2,7 @@
 
 .root {
   width: auto;
+  composes: xsmallToxSmall from './Spacing.css';
   margin-left: var(--large-padding);
 
   /* Important 'transform' in order to force refresh the ::before and ::after rules
