[form-builder] Block editor: refactor editNode and put all editing concerns into here

--- a/packages/@sanity/form-builder/src/inputs/BlockEditor/nodes/styles/InlineObject.css
+++ b/packages/@sanity/form-builder/src/inputs/BlockEditor/nodes/styles/InlineObject.css
@@ -2,7 +2,7 @@
 @import 'part:@sanity/base/theme/variables-style';
 
 .root {
-  display: inline;
+  display: inline-block;
   position: relative;
   margin: 0 1px; /* Allow cursor to show in nearby text */
 }
