--- a/packages/@sanity/components/src/selects/styles/StyleSelect.css
+++ b/packages/@sanity/components/src/selects/styles/StyleSelect.css
@@ -6,12 +6,10 @@
   position: relative;
 
   @nest &:focus {
-    box-shadow: var(--input-box-shadow--focus);
-  }
-
-  @nest &.disabled {
-    pointer-events: none;
-    opacity: 0.5;
+    box-shadow:
+      0 0 2px 1px color(var(--input-border-color-focus)),
+      0 0 4px 0 color(var(--input-border-color-focus) a(60%)),
+      0 0 10px 5px color(var(--input-border-color-focus) a(10%));
   }
 }
 
@@ -43,45 +41,13 @@
 
 .selectContainer {
   composes: selectContainer from 'part:@sanity/components/selects/default-style';
-  display: flex;
 }
 
 .arrow {
-  display: flex;
-  align-items: center;
-  padding-left: 0.5em;
-  margin-left: auto;
+  composes: functions from './SearchableSelect.css';
 }
 
-.portal {
-  position: fixed;
-  z-index: var(--zindex-portal);
-  top: 0;
-  left: 0;
-}
-
-<<<<<<< HEAD
-<<<<<<< HEAD
 .popper {
-  composes: shadow-6dp from "part:@sanity/base/theme/shadows-style";
-  box-sizing: border-box;
-  background-color: var(--component-bg);
-  position: relative;
-  max-height: inherit;
-  overflow: auto;
-}
-
-=======
->>>>>>> [form-builder] Fixing styleselect
-.list {
-  margin: 0;
-  padding: 0;
-  display: block;
-  position: absolute;
-  overflow: hidden;
-=======
-.popper {
->>>>>>> [components] Add keyboard navigation to styleSelect
   composes: shadow-4dp from "part:@sanity/base/theme/shadows-style";
   box-sizing: border-box;
   background-color: var(--component-bg);
