--- a/packages/@sanity/form-builder/src/inputs/BlockEditor/nodes/styles/Spacing.css
+++ b/packages/@sanity/form-builder/src/inputs/BlockEditor/nodes/styles/Spacing.css
@@ -3,12 +3,12 @@
 .default {
   display: block;
   margin: 0;
-  padding: 0;
+  padding: var(--small-padding) 0;
 }
 
-.default + .default {
+/* .default + .default {
   padding-top: var(--medium-padding);
-}
+} */
 
 .xsmallToxSmall + .xsmallToxSmall {
   padding-top: 0.25rem;
